ajuste indice temático

--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,15 @@
                                             <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/ecosistemico/">Ver más</a></div>
                                         </div>
                                     </li>
+                                    <li class="list-group-item nav-tema-item">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <div class="avatar avatar-sm"><span class="nav-tema-item__icon avatar-title font-size-lg bg-secondary-soft rounded-circle text-primary font-weight-bold">4</span></div>
+                                            </div>
+                                            <div class="col ml-n2"><span class="nav-tema-item__titulo"> <a href="main.html#page/biotecnologia/">Biotecnología</a></span></div>
+                                            <div class="col-auto"> <a class="btn btn-light nav-tema-item__btn" href="main.html#page/biotecnologia/">Ver más</a></div>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
