--- a/public/main.html
+++ b/public/main.html
@@ -31,7 +31,7 @@
                             <div class="curso-portada">
                                 <div class="row align-items-center">
                                     <div class="col-12 col-lg-6">
-                                        <h3 class="curso-subtitulo" id="curso-titulo-componente">Habilidades cognitivas en ciencias naturales.</h3>
+                                        <h3 class="curso-subtitulo" id="curso-titulo-componente">Biología</h3>
                                         <h1 class="curso-titulo" id="curso-titulo-tema">Entorno vivo</h1>
                                         <div class="brand-line-primary"></div>
                                         <div class="keywords"><span class="badge badge-pill badge-light mr-2">#sistema</span><span class="badge badge-pill badge-light mr-2">#célula</span><span class="badge badge-pill badge-light mr-2">#ecosistema</span></div>
