--- a/public/ruta.html
+++ b/public/ruta.html
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="col-12 col-md-5">
                         <h3 class="footer-subtitulo mb-4">ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES </h3>
-                        <p class="footer-texto mb-2"><strong>Ingry Dayanna Bonilla Monzón</strong><br /> <span class="text-small">Líder del equipo</span></p>
+                        <p class="footer-texto mb-2"><strong>Maria Camila Garcia Santamaria</strong><br /> <span class="text-small">Líder del equipo</span></p>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -137,17 +137,13 @@
                         <h4 class="footer-subtitulo-2 mt-0">
                             <div class="fa fa-caret-right mr-2"></div>Contenido Instruccional
                         </h4>
-                        <p class="footer-texto mb-2"><strong>Gloria Matilde Lee Mejía </strong><br /> <span class="text-small">Responsable del equipo</span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de Comercio y Servicios</span><br /><span class="text-small">Regional Tolima</span></p>
-                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
+                        <p class="footer-texto mb-2"><strong>Rafael Nelftalí Lizcano Reyes</strong><br /> <span class="text-small">Asesor metodologógico y pedagógico<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro industrial del diseño y la manufactura </span><br /><span class="text-small">Regional Santander </span></p>
                         <p class="footer-texto mb-2"><strong>Janeth Beatriz Forero Muñoz</strong><br /><span class="text-small">Profesional de Gestión Educativa<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro para la Industria de la Comunicación Gráfica</span></p>
                         <p class="footer-texto mb-2"><strong>Silvia Milena Sequeda Cárdenas</strong><br /><span class="text-small">Diseñador instruccional<br /></span></p>
                         <p class="footer-texto mb-2"><strong>Leidy Carolina Arias Aguirre</strong><br /> <span class="text-small">Evaluador instruccional<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">Centro de diseño y metrología</span></p>
-                        <p class="footer-texto mb-2"><strong>Martha Isabel Martínez Vargas</strong><br /> <span class="text-small">Asesor pedagógico<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Centro industrial del diseño y la manufactura</span><br /><span class="text-small">Regional Santander</span></p>
                     </div>
                     <div class="col-12 col-md-5">
                         <h4 class="footer-subtitulo-2 mt-0">
@@ -166,10 +162,8 @@
                         <h4 class="footer-subtitulo-2 mt-4">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
                         </h4>
-                        <p class="footer-texto"> <strong>Edwin Mauricio Lamprea Hernández</strong><br />
-                            <strong>Mauricio Eduardo Campuzano Mendez.</strong><br />
-                            <strong>William Rafael Castillo Ali</strong><br /><span class="text-small">Validación de recursos<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">CENTRO DE COMERCIO Y SERVICIOS</span><br /><span class="text-small">Regional Tolima</span></p>
+                        <p class="footer-texto"><strong>Milady Tatiana Villamil Castellanos</strong><br /> <span class="text-small">Validación de recursos.<br /></span></p>
+                        <p class="footer-texto"><span class="text-small text-uppercase">Centro de comercio y servicios </span><br /><span class="text-small">Regional Tolima</span></p>
                     </div>
                     <div class="col-12 col-md-2">
                         <div class="d-flex flex-column justify-content-center"><img src="assets/images/logos/senaLogo.svg" style="max-width:100px" /></div>
