Se elimina el apartado de resultados de aprendizaje

--- a/public/main.html
+++ b/public/main.html
@@ -31,8 +31,7 @@
                             <div class="curso-portada">
                                 <div class="row align-items-center">
                                     <div class="col-12 col-lg-6">
-                                        <h3 class="curso-subtitulo" id="curso-titulo-componente">Biología</h3>
-                                        <h1 class="curso-titulo" id="curso-titulo-tema">Entorno vivo</h1>
+                                        <h1 class="curso-titulo" id="curso-titulo-tema">Biología</h1>
                                         <div class="brand-line-primary"></div>
                                         <div class="keywords"><span class="badge badge-pill badge-light mr-2">#sistema</span><span class="badge badge-pill badge-light mr-2">#célula</span><span class="badge badge-pill badge-light mr-2">#ecosistema</span></div>
                                         <div class="barra-dots mt-5"><img class="img-fluid" src="assets/images/header/icon_dots.svg" alt="alt" /></div>
