--- a/public/material.html
+++ b/public/material.html
@@ -22,7 +22,6 @@
                         </a><a class="curso-topbar__menubar collapsed btn-menu-responsive d-none" data-toggle="collapse" href="#curso-topbar__nav" aria-expanded="false"><span></span><span></span><span></span></a>
                         <nav class="curso-topbar__nav collapse show d-none d-md-block" id="curso-topbar__nav">
                             <ul class="curso-topbar__list">
-                                <li class="curso-topbar__item"><a class="curso-topbar__link" href="#ResultadosAprendizaje"><span class="text-white">Resultados de aprendizaje</span></a></li>
                                 <li class="curso-topbar__item"><a class="curso-topbar__link" href="#IndiceTematico"><span class="text-white">Índice temático</span></a></li>
                                 <li class="curso-topbar__item"><a class="curso-topbar__link" href="#Creditos"><span class="text-white">Créditos</span></a></li>
                             </ul>
@@ -31,8 +30,7 @@
                     <div class="curso-portada">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-6">
-                                <h3 class="curso-subtitulo" id="curso-titulo-componente">Biología</h3>
-                                <h1 class="curso-titulo" id="curso-titulo-tema">Entorno vivo</h1>
+                                <h1 class="curso-titulo" id="curso-titulo-tema">Biología</h1>
                                 <div class="brand-line-primary"></div>
                                 <p class="curso-descripcion">El entorno vivo hace que el aprendiz reconozca los referentes que conciben un ser vivo como un sistema que permite su manifestación desde lo morfológico, fisiológico, reproductivo e interactivo con el ambiente. A su vez establece relación con el entorno químico y físico como parte del mundo de la vida.</p>
                             </div>
