--- a/public/pages/actividad-1.html
+++ b/public/pages/actividad-1.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header-ecored">
-        <h1>Actividad didáctica: Referente celular</h1>
+        <h1>Actividad didáctica: referente celular</h1>
     </div>
     <div class="row align-items-center justify-content-center my-5">
         <div class="col-8 col-md-5 col-xl-4 mb-5">
