Se realizan correcciones

--- a/public/material.html
+++ b/public/material.html
@@ -1032,7 +1032,7 @@
                                             <div class="list__item__icon"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/v1.svg"></div>
                                         </div>
                                         <div class="list__txt">
-                                            <p class="m-top">Incrementa la flexibilidad en la forma de cultivos ya que gracias a la biotecnología se ha logran cultivos mejorados y resistentes a plagas. </p>
+                                            <p class="m-top">Incrementa la flexibilidad en la forma de cultivos ya que gracias a la biotecnología se han logrado cultivos mejorados y resistentes a plagas. </p>
                                         </div>
                                     </div>
                                     <div class="list mt-2">
